# Esp32-Irrigation-Computer

./: .gitignore  CMakeLists.txt  README.md
main/: CMakeLists.txt  config_store.cpp  config_store.h  idf_component.yml  leds.cpp  leds.h  main.cpp  net_setup.cpp  net_setup.h  valves.h  web_server.cpp  web_server.h
main/web/: advanced.html  index.html  settings.html  setup.html  style.css
